# raycaster

./: '  .gitignore  2  CMakeLists.txt  ]
assets/maps/: map.txt
examples/: bezier_curve.c
include/: Actor.h  Config.h  Debug.h  Defines.h  Editor.h  Game.h  Global.h  Map.h  Player.h  Sceen.h  Scene.h  Sprite.h  Structs.h  Texture.h  Utility.h  Vector.h  Window.h  config.h
include/actors/: Actor.h  Player.h
include/core/: Config.h
include/event/: event.h  window_event.h
include/input/: input.h
include/interface/: renderer.h  window.h  window_ctx.h
include/render/: renderer.h  texture.h
include/sim/: Map.h  Scene.h  Sprite.h  Texture.h
include/util/: Utility.h  Vector.h
src/: Actor.c  Config.c  Debug.c  Editor.c  Map.c  Player.c  Sceen.c  Scene.c  Sprite.c  Texture.c  Utility.c  Vector.c  Window.c  main.c
src/actors/: Actor.c  Player.c
src/core/: Config.c
src/event/: event.c
src/interface/: window_ctx.c
src/platform/sdl/: sdl_input.c  sdl_renderer.c  sdl_window.c  sdl_window_event.c
src/platform/sdl/include/: sdl_window.h
src/platform/sdl/src/: sdl_renderer.c  sdl_window.c
src/render/: Window.c
src/sim/: Map.c  Scene.c  Texture.c
src/util/: Utility.c
